# Numerical_Computing

./: README.md
Assignment1Numerical/: ass1.sln
Assignment1Numerical/Debug/: ass1.ilk
Assignment1Numerical/ass1/: ass1.cpp  ass1.vcxproj
Assignment2Numerical/: Ass2.sln
Assignment2Numerical/Ass2/: Ass2.cpp  Ass2.vcxproj  Ass2.vcxproj.filters  Moore.txt
Assignment3Numerical/: ass3.sln
Assignment3Numerical/Debug/: ass3.ilk
Assignment3Numerical/ass3/: ass3.vcxproj  ass3.vcxproj.filters
NumericalLab1/: CMakeLists.txt
NumericalLab1/nermericalLab1/: CMakeLists.txt  nermericalLab1.cpp  nermericalLab1.h
NumericalLab10/: Lab10.sln
NumericalLab10/Debug/: Lab10.ilk
NumericalLab10/Lab10/: Lab10.cpp  Lab10.vcxproj
NumericalLab2/: CMakeLists.txt
NumericalLab2/numlab2/: CMakeLists.txt  numlab2.cpp  numlab2.h
NumericalLab3/: NumLab3.sln
NumericalLab3/Debug/: NumLab3.ilk
NumericalLab3/NumLab3/: Lab3.c  NumLab3.vcxproj  NumLab3.vcxproj.filters  math.cpp
NumericalLab4/: NumericalLab4.sln
NumericalLab4/Debug/: NumericalLab4.ilk
NumericalLab4/NumericalLab4/: Lab4.cpp  NumericalLab4.vcxproj
NumericalLab5/: NumLab5.sln
NumericalLab5/Debug/: NumLab5.ilk
NumericalLab5/NumLab5/: Lab5.cpp  NumLab5.vcxproj
NumericalLab6/: Lab6Numerical.sln
NumericalLab6/Debug/: Lab6Numerical.ilk
NumericalLab6/Lab6Numerical/: Lab6Numerical.vcxproj  lab6.cpp
NumericalLab7/: Lab7Numerical.sln
NumericalLab7/Debug/: Lab7Numerical.ilk
NumericalLab7/Lab7Numerical/: Lab7Numerical.vcxproj  lab7.cpp
NumericalLab9/: Lab9.sln
NumericalLab9/Debug/: Lab9.ilk
(+95 files in other folders)
