# CMakeList.txt : CMake project for nermericalLab1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (nermericalLab1 "nermericalLab1.cpp" "nermericalLab1.h")

# TODO: Add tests and install targets if needed.
